--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Wild Game Recipe App - Share and discover delicious wild game recipes"
+      content="North American Wild Game Recipe Crowdsourcing App"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,18 +24,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Wild Game Recipe App</title>
+    <title>Wild Game Recipes</title>
+    <!-- You can add custom fonts or other CDN-hosted resources here -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This div with id="root" is where your React app will be rendered.
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
+      
+      You can add additional HTML here if needed, but typically, 
+      you'll want to create React components for any additional content.
     -->
   </body>
 </html>
